--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="shortcut icon" href="/src/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="/src/css/responsive.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 </head>
 
 <body>
     <section class="header" id="header">
         <div class="header-container">
             <a href="/" class="logo">
-                <img src="/src/images/logo.svg" alt="logo">
+                <img src="./src/images/logo.svg" alt="logo">
             </a>
             <ul class="menu">
                 <li class="item"><a href="#about" class="nav-link">About</a></li>
@@ -76,7 +76,7 @@
         <h3 class="title">Client testimonials</h3>
         <div class="rating-container">
             <div class="rating">
-                <img src="/src/images/image-emily.jpg" alt="avatar" class="avatar">
+                <img src="./src/images/image-emily.jpg" alt="avatar" class="avatar">
                 <p class="description">We put our trust in Sunnyside and they delivered, making sure our needs were met
                     and
                     deadlines were always hit.</p>
@@ -84,7 +84,7 @@
                 <p class="job">Marketing Director</p>
             </div>
             <div class="rating">
-                <img src="/src/images/image-thomas.jpg" alt="avatar" class="avatar">
+                <img src="./src/images/image-thomas.jpg" alt="avatar" class="avatar">
                 <p class="description">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
                     made
                     it a satisfying and enjoyable experience.</p>
@@ -92,7 +92,7 @@
                 <p class="job">Chief Operating Officer</p>
             </div>
             <div class="rating">
-                <img src="/src/images/image-jennie.jpg" alt="avatar" class="avatar">
+                <img src="./src/images/image-jennie.jpg" alt="avatar" class="avatar">
                 <p class="description">Incredible end result! Our sales increased over 400% when we worked with
                     Sunnyside.
                     Highly recommended!</p>
@@ -104,28 +104,28 @@
     <section class="projects" id="projects">
         <div class="project">
             <a href="/">
-                <img src="/src/images/desktop/image-gallery-milkbottles.jpg" alt="photo" class="image">
+                <img src="./src/images/desktop/image-gallery-milkbottles.jpg" alt="photo" class="image">
             </a>
         </div>
         <div class="project">
             <a href="/">
-                <img src="/src/images/desktop/image-gallery-orange.jpg" alt="photo" class="image">
+                <img src="./src/images/desktop/image-gallery-orange.jpg" alt="photo" class="image">
             </a>
         </div>
         <div class="project">
             <a href="/">
-                <img src="/src/images/desktop/image-gallery-cone.jpg" alt="photo" class="image">
+                <img src="./src/images/desktop/image-gallery-cone.jpg" alt="photo" class="image">
             </a>
         </div>
         <div class="project">
             <a href="/">
-                <img src="/src/images/desktop/image-gallery-sugarcubes.jpg" alt="photo" class="image">
+                <img src="./src/images/desktop/image-gallery-sugarcubes.jpg" alt="photo" class="image">
             </a>
         </div>
     </section>
     <section class="contact" id="contact">
         <a href="#header">
-            <img src="/src/images/logo.svg" alt="logo" class="logo">
+            <img src="./src/images/logo.svg" alt="logo" class="logo">
         </a>
         <ul class="menu">
             <li class="item"><a href="#about">About</a></li>
