atualizando caminho js

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </ul>
     </section>
 
-    <script src="/src/js/index.js"></script>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
